TECH-1693: Give hazelcast access to required Java packages for best performance (#699)
* TECH-1693: Give hazelcast access to required Java packages for best performance

* TECH-1693: Give hazelcast access to required Java packages for best performance